--- a/apps/emonio/custom.html
+++ b/apps/emonio/custom.html
@@ -37,7 +37,7 @@
       };
 
       // Upload the app with the additional file containig the login info
-      sendCustomApp({
+      sendCustomizedApp({
         storage: [
           {name: "credentials.json", content: JSON.stringify(devices)}
         ]
