--- a/apps/emonio/custom.html
+++ b/apps/emonio/custom.html
@@ -39,7 +39,7 @@
       // Upload the app with the additional file containig the login info
       sendCustomizedApp({
         storage: [
-          {name: "credentials.json", content: JSON.stringify(devices)}
+          {name: "emonio-creds.json", content: JSON.stringify(devices)}
         ]
       });
 
